@@ -929,7 +929,8 @@
 
 (proclaim-function ash (integer integer) t)
 (proclaim-function logcount (t) t)
-(proclaim-function integer-length (t) fixnum)
+(proclaim-function integer-length (t) fixnum :predicate t :no-side-effects t)
+(def-inline integer-length :always (t) :cl-index "ecl_integer_length(#0)")
 (proclaim-function si:bit-array-op (*) t)
 (proclaim-function zerop (t) t :predicate t :no-side-effects t)
 (def-inline zerop :always (t) :bool "ecl_zerop(#0)")
