@@ -1165,7 +1165,7 @@ extern ECL_API cl_object cl_logeqv _ARGS((cl_narg narg, ...));
 extern ECL_API cl_object ecl_boole(int op, cl_object x, cl_object y);
 extern ECL_API cl_object ecl_ash(cl_object x, cl_fixnum w);
 extern ECL_API int ecl_fixnum_bit_length(cl_fixnum l);
-
+extern ECL_API cl_index ecl_integer_length(cl_object i);
 
 /* num_pred.c */
 
